# ConvOnPhone

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/compilesense/liuyi/convonphone/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: convolution.cl  convolutionNaive.cl  header.h  im2col.cl  step.cl  vector_add.cl
app/src/main/cpp/: Convolution.cpp  Convolution.h  OpenCL.cpp  OpenCL.h  aopencl.c  aopencl.h  native-lib.cpp  neonTest.cpp  neonTest.h
app/src/main/java/com/compilesense/liuyi/convonphone/: MainActivity.java
app/src/main/java/com/compilesense/liuyi/convonphone/algorithm/: Convolution.java  Mask.java  MockImage.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/compilesense/liuyi/convonphone/: ExampleUnitTest.java
